# agent-learning

./: .gitignore  AGENT_LEARNING.md  CLAUDE.md  LICENSE  Makefile  README.md  example.env  pyproject.toml  run  test
docs/weekly/: week02_summary.md
langchain/: L1_fast_agent.ipynb  L2_messages.ipynb  L3_streaming.ipynb  L4_tools.ipynb  L5_tools_with_mcp.ipynb  L6_memory.ipynb  L7_structuredOutput.ipynb  L8_dynamic.ipynb  L9_HITL.ipynb  README.md  env_utils.py
langchain-academy/module-0/: basics.ipynb
langchain-academy/module-1/: agent-memory.ipynb  agent.ipynb  chain.ipynb  deployment.ipynb  router.ipynb  simple-graph.ipynb
langchain-academy/module-2/: chatbot-external-memory.ipynb  chatbot-summarization.ipynb  multiple-schemas.ipynb  state-reducers.ipynb  state-schema.ipynb  trim-filter-messages.ipynb
langchain-academy/module-3/: breakpoints.ipynb  dynamic-breakpoints.ipynb  edit-state-human-feedback.ipynb  streaming-interruption.ipynb  time-travel.ipynb
langchain-academy/module-4/: map-reduce.ipynb  parallelization.ipynb  research-assistant.ipynb  sub-graph.ipynb
langchain-academy/module-5/: memory_agent.ipynb  memory_store.ipynb  memoryschema_collection.ipynb  memoryschema_profile.ipynb
langchain-academy/module-6/: assistant.ipynb  connecting.ipynb  creating.ipynb  double-texting.ipynb
langchain/studio/: sql_agent1.py  sql_agent2.py
langgraph/: L1_nodes.ipynb  L2_edges.ipynb  L3-L4_cedges_memory.ipynb  L5_interrupt.ipynb  L6_EmailAgent.ipynb  README.md  env_utils.py
lectures/lecture01/: day01_first_chat.py
lectures/lecture02/: day02_dummy_agent_notes.md  day02_streming.py  dummy_agent_library.ipynb
lectures/lecture03/: day03_tool_agent.py  quickstart.py
lectures/lecture04/: day04_patent_tool.py
lectures/lecture05/: day05_error_handling.py
lectures/lecture06/: patent_assistant_v0.2.py
lectures/lecture07/: email_agent_langgraph.py
lectures/lecture08/: prompt_templates.py
lectures/lecture09/: schema_v1.py
lectures/lecture10/: failure_samples.json  validate_failures.py
lectures/lecture11/: retry_flow.md  retry_flow.mmd  retry_parser.py
(+10 files in other folders)
